# ml_scikit_tensorflow_practice

./: README.md
01_linear_model/: pyproject.toml
01_linear_model/01_linear_model/: train_linear_model.py
