[tool.poetry]
name = "01-linear-model"
version = "0.1.0"
description = ""
authors = ["AsyaAndreeva <asiara032@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
